--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,13 @@
 repos:
-- repo: local
+# - repo: local
+#   hooks:
+#   - id: markdownlint_docker
+#     name: Markdownlint Docker
+#     description: Run markdown lint on your Markdown files using the project docker image
+#     language: docker_image
+#     files: \.(md|mdown|markdown)$
+#     entry: markdownlint/markdownlint
+- repo: https://github.com/DavidAnson/markdownlint-cli2
+  rev: v0.5.0
   hooks:
-  - id: markdownlint_docker
-    name: Markdownlint Docker
-    description: Run markdown lint on your Markdown files using the project docker image
-    language: docker_image
-    files: \.(md|mdown|markdown)$
-    entry: markdownlint/markdownlint
+  - id: markdownlint-cli2
