--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -179,7 +179,7 @@
   // MD033/no-inline-html - Inline HTML
   "MD033": {
     // Allowed elements
-    "allowed_elements": ["div", "table", "tr", "td"]
+    "allowed_elements": ["div", "table", "tr", "td", "a"]
   },
 
   // MD034/no-bare-urls - Bare URL used
